@@ -2590,7 +2590,6 @@ function checkRequiredKeys(array $array, array $keys) {
  */
 function clearCookies($clear = false, $id = null) {
 	if ($clear) {
-		$url = new CUrl();
-		insert_js('cookie.eraseArray("'.basename($url->getPath(), '.php').($id ? '_'.$id : '').'")');
+		insert_js('cookie.eraseArray("'.basename($_SERVER['SCRIPT_NAME'], '.php').($id ? '_'.$id : '').'")');
 	}
 }
