@@ -25,6 +25,10 @@ define('LINK_BAD', 1);
 
 class testUrlParameters extends CWebTest {
 
+	public function testUrlParameters_login() {
+		$this->zbxTestLogin('dashboard.php');
+	}
+
 	// Returns test data
 	public static function zbx_data() {
 		return array(
@@ -288,6 +292,17 @@ class testUrlParameters extends CWebTest {
 					)
 				)
 			),
+			array(
+				array(
+					'expected' => LINK_BAD,
+					'url' => 'actionconf.php?form=update',
+					'title' => 'Configuration of actions',
+					'errors' => array(
+						'ERROR: Zabbix has received an incorrect request.',
+						'Critical error. Field "actionid" is mandatory.'
+					)
+				)
+			),
 			// Screens
 			array(
 				array(
@@ -485,6 +500,17 @@ class testUrlParameters extends CWebTest {
 					)
 				)
 			),
+			array(
+				array(
+					'expected' => LINK_BAD,
+					'url' => 'discoveryconf.php?form=update',
+					'title' => 'Configuration of discovery',
+					'errors' => array(
+						'ERROR: Zabbix has received an incorrect request.',
+						'Critical error. Field "druleid" is mandatory.'
+					)
+				)
+			),
 			// Overview
 			array(
 				array(
@@ -533,6 +559,17 @@ class testUrlParameters extends CWebTest {
 					'errors' => array(
 						'ERROR: Zabbix has received an incorrect request.',
 						'Critical error. Field "groupid" is not integer.'
+					)
+				)
+			),
+			array(
+				array(
+					'expected' => LINK_BAD,
+					'url' => 'overview.php?&form_refresh=1',
+					'title' => 'Overview \[refreshed every 30 sec\]',
+					'errors' => array(
+						'ERROR: Zabbix has received an incorrect request.',
+						'Critical error. Field "groupid" is mandatory.'
 					)
 				)
 			),
@@ -641,6 +678,18 @@ class testUrlParameters extends CWebTest {
 					)
 				)
 			),
+			array(
+				array(
+					'expected' => LINK_BAD,
+					'url' => 'latest.php?&form_refresh=1',
+					'title' => 'Latest data \[refreshed every 30 sec\]',
+					'errors' => array(
+						'ERROR: Zabbix has received an incorrect request.',
+						'Critical error. Field "groupid" is mandatory.',
+						'Critical error. Field "hostid" is mandatory.'
+					)
+				)
+			),
 			// Status of triggers
 			array(
 				array(
@@ -694,6 +743,18 @@ class testUrlParameters extends CWebTest {
 					)
 				)
 			),
+			array(
+				array(
+					'expected' => LINK_BAD,
+					'url' => 'tr_status.php?&form_refresh=1',
+					'title' => 'Status of triggers \[refreshed every 30 sec\]',
+					'errors' => array(
+						'ERROR: Zabbix has received an incorrect request.',
+						'Critical error. Field "groupid" is mandatory.',
+						'Critical error. Field "hostid" is mandatory.'
+					)
+				)
+			),
 			// Events, also Availability report
 			array(
 				array(
@@ -735,6 +796,17 @@ class testUrlParameters extends CWebTest {
 					)
 				)
 			),
+			array(
+				array(
+					'expected' => LINK_BAD,
+					'url' => 'events.php?',
+					'title' => 'Latest events \[refreshed every 30 sec\]',
+					'errors' => array(
+						'ERROR: Zabbix has received an incorrect request.',
+						'Critical error. Field "triggerid" is mandatory.'
+					)
+				)
+			),
 			// Custom graphs
 			array(
 				array(
@@ -748,7 +820,7 @@ class testUrlParameters extends CWebTest {
 				array(
 					'expected' => LINK_BAD,
 					'url' => 'charts.php?&form_refresh=1&fullscreen=0&groupid=0&hostid=1&graphid=0',
-					'title' => 'Custom graphs \[refreshed every 30 sec\]',
+					'title' => 'Custom graphs [refreshed every 30 sec]',
 					'errors' => array(
 						'ERROR: No permissions to referred object or it does not exist!'
 					)
@@ -768,7 +840,7 @@ class testUrlParameters extends CWebTest {
 				array(
 					'expected' => LINK_BAD,
 					'url' => 'charts.php?&form_refresh=1&fullscreen=0&groupid=0&hostid=0&graphid=15',
-					'title' => 'Custom graphs \[refreshed every 30 sec\]',
+					'title' => 'Custom graphs [refreshed every 30 sec]',
 					'errors' => array(
 						'ERROR: No permissions to referred object or it does not exist!'
 					)
@@ -797,6 +869,19 @@ class testUrlParameters extends CWebTest {
 						'Critical error. Field "groupid" is not integer.',
 						'Critical error. Field "hostid" is not integer.',
 						'Critical error. Field "graphid" is not integer.'
+					)
+				)
+			),
+			array(
+				array(
+					'expected' => LINK_BAD,
+					'url' => 'charts.php?&form_refresh=1',
+					'title' => 'Custom graphs \[refreshed every 30 sec\]',
+					'errors' => array(
+						'ERROR: Zabbix has received an incorrect request.',
+						'Critical error. Field "groupid" is mandatory.',
+						'Critical error. Field "hostid" is mandatory.',
+						'Critical error. Field "graphid" is mandatory.'
 					)
 				)
 			),
@@ -841,6 +926,17 @@ class testUrlParameters extends CWebTest {
 					)
 				)
 			),
+			array(
+				array(
+					'expected' => LINK_BAD,
+					'url' => 'screens.php?&form_refresh=1',
+					'title' => 'Custom screens \[refreshed every 30 sec\]',
+					'errors' => array(
+						'ERROR: Zabbix has received an incorrect request.',
+						'Critical error. Field "elementid" is mandatory.'
+					)
+				)
+			),
 			// Custom maps
 			array(
 				array(
@@ -879,6 +975,17 @@ class testUrlParameters extends CWebTest {
 					'errors' => array(
 						'ERROR: Zabbix has received an incorrect request.',
 						'Critical error. Field "sysmapid" is not integer.'
+					)
+				)
+			),
+			array(
+				array(
+					'expected' => LINK_BAD,
+					'url' => 'maps.php?&form_refresh=1',
+					'title' => 'Network maps \[refreshed every 30 sec\]',
+					'errors' => array(
+						'ERROR: Zabbix has received an incorrect request.',
+						'Critical error. Field "sysmapid" is mandatory.'
 					)
 				)
 			),
@@ -923,6 +1030,17 @@ class testUrlParameters extends CWebTest {
 					)
 				)
 			),
+			array(
+				array(
+					'expected' => LINK_BAD,
+					'url' => 'discovery.php?&form_refresh=1',
+					'title' => 'Status of discovery',
+					'errors' => array(
+						'ERROR: Zabbix has received an incorrect request.',
+						'Critical error. Field "druleid" is mandatory.'
+					)
+				)
+			),
 			// IT services
 			array(
 				array(
@@ -938,8 +1056,7 @@ class testUrlParameters extends CWebTest {
 					'url' => 'srv_status.php?&form_refresh=1&fullscreen=0&period=1',
 					'title' => 'IT services \[refreshed every 30 sec\]',
 					'errors' => array(
-						'ERROR: Zabbix has received an incorrect request.',
-						'Critical error. Incorrect value "1" for "period" field.'
+						'ERROR: No permissions to referred object or it does not exist!'
 					)
 				)
 			),
@@ -949,8 +1066,7 @@ class testUrlParameters extends CWebTest {
 					'url' => 'srv_status.php?&form_refresh=1&fullscreen=0&period=abc',
 					'title' => 'IT services \[refreshed every 30 sec\]',
 					'errors' => array(
-						'ERROR: Zabbix has received an incorrect request.',
-						'Critical error. Incorrect value "abc" for "period" field.'
+						'ERROR: No permissions to referred object or it does not exist!'
 					)
 				)
 			),
@@ -960,8 +1076,17 @@ class testUrlParameters extends CWebTest {
 					'url' => 'srv_status.php?&form_refresh=1&fullscreen=0&period=',
 					'title' => 'IT services \[refreshed every 30 sec\]',
 					'errors' => array(
-						'ERROR: Zabbix has received an incorrect request.',
-						'Critical error. Incorrect value "" for "period" field.'
+						'ERROR: No permissions to referred object or it does not exist!'
+					)
+				)
+			),
+			array(
+				array(
+					'expected' => LINK_BAD,
+					'url' => 'srv_status.php?&form_refresh=1',
+					'title' => 'IT services \[refreshed every 30 sec\]',
+					'errors' => array(
+						'ERROR: No permissions to referred object or it does not exist!'
 					)
 				)
 			),
@@ -991,7 +1116,7 @@ class testUrlParameters extends CWebTest {
 					'title' => 'Host inventory overview',
 					'errors' => array(
 						'ERROR: Zabbix has received an incorrect request.',
-						'Critical error. Field "groupid" is not integer.'
+						'Critical error. Field "groupid" is not string.'
 					)
 				)
 			),
@@ -1002,7 +1127,18 @@ class testUrlParameters extends CWebTest {
 					'title' => 'Host inventory overview',
 					'errors' => array(
 						'ERROR: Zabbix has received an incorrect request.',
-						'Critical error. Field "groupid" is not integer.'
+						'Critical error. Field "groupid" is not string.'
+					)
+				)
+			),
+			array(
+				array(
+					'expected' => LINK_BAD,
+					'url' => 'hostinventoriesoverview.php?&form_refresh=1',
+					'title' => 'Host inventory overview',
+					'errors' => array(
+						'ERROR: Zabbix has received an incorrect request.',
+						'Critical error. Field "groupid" is mandatory.'
 					)
 				)
 			),
@@ -1044,6 +1180,17 @@ class testUrlParameters extends CWebTest {
 					'errors' => array(
 						'ERROR: Zabbix has received an incorrect request.',
 						'Critical error. Field "groupid" is not integer.'
+					)
+				)
+			),
+			array(
+				array(
+					'expected' => LINK_BAD,
+					'url' => 'hostinventories.php?&form_refresh=1',
+					'title' => 'Host inventories',
+					'errors' => array(
+						'ERROR: Zabbix has received an incorrect request.',
+						'Critical error. Field "groupid" is mandatory.'
 					)
 				)
 			),
@@ -1112,12 +1259,24 @@ class testUrlParameters extends CWebTest {
 					)
 				)
 			),
+			array(
+				array(
+					'expected' => LINK_BAD,
+					'url' => 'report2.php?',
+					'title' => 'Availability report',
+					'errors' => array(
+						'ERROR: Zabbix has received an incorrect request.',
+						'Critical error. Field "triggerid" is mandatory.',
+						'Critical error. Field "filter_groupid" is mandatory.',
+						'Critical error. Field "filter_hostid" is mandatory.'
+					)
+				)
+			),
 			// Bar reports
 			array(
 				array(
 					'expected' => LINK_GOOD,
 					'url' => 'report6.php?items[0][caption]=Agent+ping&items[0][itemid]=23455&items[0][color]=009900&items[0][calc_fnc]=2&items[0][axisside]=0&report_show=Show',
-					'title' => 'Bar reports',
 					'text' => 'Report'
 				)
 			),
@@ -1158,7 +1317,7 @@ class testUrlParameters extends CWebTest {
 	 * @dataProvider zbx_data
 	 */
 	public function testUrlParameters_UrlLoad($zbx_data) {
-		$this->zbxTestLogin($zbx_data['url']);
+		$this->zbxTestOpen($zbx_data['url']);
 		switch ($zbx_data['expected']) {
 			case LINK_GOOD:
 				$this->checkTitle($zbx_data['title']);
